:lipstick: fix contrast

--- a/src/global.css
+++ b/src/global.css
@@ -17,7 +17,7 @@
 
 body {
   margin: 0;
-  background: #181818;
+  background: #121212;
   min-height: 100vh;
   font-family: 'Inter', sans-serif;
   color: white;
